--- a/tex/mlClassDefs.tex
+++ b/tex/mlClassDefs.tex
@@ -4,6 +4,7 @@
 \usepackage{graphics}
 \usepackage{graphicx}
 \usepackage{colortbl}
+\usepackage{amsmath}
 
 \newenvironment{proof}{\noindent{\bf Proof:}}{\qed\bigskip}
 
