--- a/tex/mlClassDefs.tex
+++ b/tex/mlClassDefs.tex
@@ -6,6 +6,10 @@
 \usepackage{colortbl}
 \usepackage{amsmath}
 
+\usepackage{algorithm}
+\usepackage[noend]{algpseudocode}
+\usepackage{array}
+
 \newenvironment{proof}{\noindent{\bf Proof:}}{\qed\bigskip}
 
 \newtheorem{theorem}{Theorem}
@@ -56,18 +60,7 @@
 \markright{#1}
 }
 
-\newenvironment{algorithm}
-{\begin{center}
-\begin{tabular}{|l|}
-\hline
-\begin{minipage}{1in}
-\begin{tabbing}
-\quad\=\qquad\=\qquad\=\qquad\=\qquad\=\qquad\=\qquad\=\kill}
-{\end{tabbing}
-\end{minipage} \\
-\hline
-\end{tabular}
-\end{center}}
+
 
 \def\Comment#1{\textsf{\textsl{$\langle\!\langle$#1\/$\rangle\!\rangle$}}}
 
