--- a/tex-v2/mlClassDefs.tex
+++ b/tex-v2/mlClassDefs.tex
@@ -10,6 +10,8 @@
 \usepackage[noend]{algpseudocode}
 \usepackage{array}
 
+\usepackage{epstopdf}
+
 \newenvironment{proof}{\noindent{\bf Proof:}}{\qed\bigskip}
 
 \newtheorem{theorem}{Theorem}
