--- a/tex-v3/mlClassDefs.tex
+++ b/tex-v3/mlClassDefs.tex
@@ -12,6 +12,9 @@
 
 \usepackage{epstopdf}
 
+\setlength\intextsep{10pt}
+\setlength\textfloatsep{10pt}
+
 \newenvironment{proof}{\noindent{\bf Proof:}}{\qed\bigskip}
 
 \newtheorem{theorem}{Theorem}
